<resources>
    <string name="app_name">BookTracker</string>
    <string name="book_cover">Book Cover</string>
    <string name="add_book">TODO</string>
    <string name="book_title">Book Title</string>
    <string name="author">Author:</string>
    <string name="author_name">Author Name</string>
    <string name="pages">Pages:</string>
    <string name="number_of_pages">Number of Pages</string>
    <string name="description">Description:</string>
    <string name="description_content">Description Content</string>
    <string name="mark_as_finished">Mark as Finished</string>
    <string name="book_name">Book name</string>
    <string name="search">Search</string>
    <string name="reading">Reading</string>
    <string name="finished">Finished</string>
    <string name="sign_in">SIGN IN</string>
    <string name="unknown_author">UNKNOWN</string>
</resources>